fixed alignment issues in mobile site

--- a/website/src/css/App.css
+++ b/website/src/css/App.css
@@ -49,9 +49,25 @@ html {
 }
 
 @media (max-width: 885px) {
+  html {
+    /* background-color: #151515; */
+    background-position: top left;
+    background-repeat: repeat-y;
+  }
   /* .right {
     display: none;
   } */
+
+  .proj-link {
+    background-color: #000000cb;
+    color: #fff;
+    position: relative;
+    width: max-content;
+    margin-bottom: 30px;
+    left: 0;
+    padding: 30px;
+    border-radius: 10px;
+  }
 
   .left {
     width: 100vw;
@@ -64,8 +80,10 @@ html {
     width: 100vw;
   }
   .terminals {
+    height: 100vh;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 26px;
   }
 
